scripts/manifest/scenario2/legacy_api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-api-deployment
  namespace: fast-track-istio
spec:
  selector:
    matchLabels:
      app: legacy-api
  replicas: 2
  minReadySeconds: 1
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: legacy-api
    spec:
      containers:
        - name: legacy-api
          image: fasttrackistio/legacy:1.0.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: http-legacy-api
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: legacy-api-service
  namespace: fast-track-istio
spec:
  selector:
    app: legacy-api
  ports:
    - name: http-legacy-api-service
      port: 7000
      targetPort: http-legacy-api
