scripts/manifest/scenario2/bookclub_gw_vs_svc_deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio 
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookclub
  namespace: fast-track-istio 
  labels:
    app: bookclub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookclub
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: bookclub
    spec:
      containers:
        - name: bookclub
          image: fasttrackistio/bookclub:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookclub
  namespace: fast-track-istio
  labels:
    app: bookclub
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: bookclub
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: book-club-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-book-club-gateway
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-club-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - "*"
  gateways:
    - book-club-gateway
  http:
    - route:
        - destination:
            host: bookclub
            port:
              number: 8080
