scripts/manifest/scenario2/gateway_vs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-track-istio 
  labels:
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: books-gateway
  namespace: fast-track-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-book-club-gateway
        protocol: HTTP
      hosts:
        - books.fast-track-istio.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  namespace: fast-track-istio 
  labels:
    app: books
spec:
  replicas: 2
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: books
          image: fasttrackistio/books:1.0.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: books
  namespace: fast-track-istio 
  labels:
    app: books
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: books
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-vservice
  namespace: fast-track-istio
spec:
  hosts:
    - books.fast-track-istio.io
  gateways:
    - books-gateway
  http:
    - route:
        - destination:
            host: books
            port:
              number: 80
